# npm-deps

./: README.md  auto-update.js  package-lock.json  package.json
.changeset/: beige-coats-compete.md  beige-eyes-decide.md  big-moles-fly.md  calm-parents-greet.md  chatty-squids-brush.md  chilly-actors-repeat.md  chilly-parrots-mix.md  clean-hotels-try.md  cool-pots-pump.md  curvy-mice-teach.md  dirty-eels-dress.md  early-zebras-deny.md  eight-trains-reflect.md  empty-students-marry.md  five-cherries-mix.md  five-jokes-bake.md  fluffy-cows-heal.md  forty-geese-ring.md  forty-lemons-notice.md  friendly-jokes-jump.md  giant-ligers-study.md  good-fishes-leave.md  happy-steaks-explain.md  hungry-glasses-judge.md  khaki-jokes-happen.md  late-keys-decide.md  late-readers-try.md  lazy-items-work.md  little-doors-punch.md  lovely-fishes-admire.md  metal-ways-clap.md  modern-dolls-sort.md  new-eyes-remain.md  nine-steaks-hope.md  old-avocados-listen.md  old-geckos-provide.md  perfect-goats-collect.md  perfect-students-add.md  popular-kids-film.md  popular-suns-sleep.md  (+26 more)
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml  update.yml
helpers/cli-utils/: CHANGELOG.md  package.json
helpers/cli-utils/src/: index.ts
helpers/cli-utils/template/: CMakeLists.txt
helpers/cli-utils/template/recipe/: test-package.js
helpers/cli-utils/template/test/: main.cpp
helpers/npm-cmake/: CHANGELOG.md  README.md  index.js  npm-cmake.js  package.json
helpers/npm-cmake/test/: test.js
test-cmake-config/: package.json  test.js
